oop_mro/tests/trybuild/fail_override_field.stderr
error: `#[override]` is only allowed on virtual methods
 --> tests/trybuild/fail_override_field.rs:6:9
  |
6 |         value: usize,
  |         ^^^^^
