oop_mro/tests/trybuild/fail_override_field.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {
        #[override]
        value: usize,
    }
}

fn main() {}
